[BugFix] iFrame broken on mobile. Switched to resume link for now. 🐛

--- a/css/creative.css
+++ b/css/creative.css
@@ -310,3 +310,8 @@ header.masthead p {
 .btn-primary:active, .btn-primary:focus {
   box-shadow: 0 0 0 0.2rem #a7afb4 !important;
 }
+
+.link-space {
+  margin-top:2em;
+  margin-bottom:2em;
+}
